@@ -75,6 +75,12 @@ class languages {
 		'newimages-summary',
 		'unwatchedpages-summary',
 		'userrights-summary',
+		'brokenredirects-summary',
+		'deadendpages-summary',
+		'disambiguations-summary',
+		'doubleredirects-summary',
+		'lonelypages-summary',
+		'unusedtemplates-summary',
 		'variantname-zh-cn',
 		'variantname-zh-tw',
 		'variantname-zh-hk',
